# alpha-pipeline

./: .gitignore  AGENTS.md  DATA_FETCH.md  DATA_TOOLS.md  Makefile  README.md  environment.yml  pyproject.toml  pyrightconfig.json  requirements.txt
notebooks/: a500_pe_pb_stats.ipynb  overnight_mean_return_vs_valuation.ipynb  overnight_net_pnl_vs_valuation_thresholds.ipynb  overnight_pnl_vs_mean_correlation.ipynb
qlib_lab/: __init__.py  provider_uri.py  run_qlib_backtest.py  search_topk.py  sweep_tail_feature_backtest.py
qlib_lab/backtest/: __init__.py  config.py  plotting.py
qlib_lab/cli/: __init__.py  backtest.py
qlib_lab/dataset/: __init__.py  factory.py  from_args.py
qlib_lab/handler/: __init__.py  builder.py  processors.py  quant_foundry.py
qlib_lab/model/: __init__.py
qlib_lab/runtime/: __init__.py  constants.py  mlflow.py  qlib_init.py
qlib_lab/strategy/: __init__.py  config.py  constants.py
qlib_lab/training/: __init__.py  constants.py  fit.py
scripts/: __init__.py  build_target_quote_from_tushare.py  csv_to_qlib_bin.py  dump_bin.py  fetch_market_data.py  generate_runtime_targets.py  process_to_qlib.py  qlib_bin_to_csv.py  read_qlib_bin.py  run_backtest.py  search_topk.py  sweep_feature_group.py  sweep_pca_feature_groups.py  sweep_tail_features.py  test_qlib_data.py  xls_to_csv.py
scripts/build_qlib/: __init__.py  dump_bin.py  to_qlib.py
scripts/fetchers/: __init__.py  base.py  company.py  index.py  market.py  quote.py  stock.py
scripts/qlib/: __init__.py  __main__.py  run_backtest.py  (+4 more)
tests/: test_data_fetch_architecture.py
(+131 files in other folders)
