[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-data-foundry"
version = "0.1.0"
description = "Data processing project for market and qlib datasets"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv",
    "tushare",
    "xlrd",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[project.scripts]
quant-data-pipeline = "data_fetch.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

